nowrap fix

--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -18,7 +18,7 @@
   line-height: 24px;
   font-weight: 500;
   display: inline-flex;
-  text-wrap: nowrap;
+  white-space: nowrap;
   align-items: center;
   padding: 4px 10px;
   border-bottom: 1px solid transparent;
